# actitect

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  environment.yml  install.py  main.py  pyproject.toml  test.py
examples/actitect/: actitect_api_example.ipynb  api_example.py.ipynb  cli_processing_settings.yaml  pilot_bf_actitect.py
examples/rbdisco/: rbdisco_api_example.ipynb
libs/actitect/: MANIFEST.in  environment.yml  pyproject.toml
libs/actitect-rbdisco/: CITATION.cff  MANIFEST.in  environment.yml  pyproject.toml
libs/actitect-rbdisco/src/actitect/rbdisco/: __init__.py  api.py  cli.py
libs/actitect-rbdisco/src/actitect/rbdisco/blocks/: __init__.py  cross_validation.py  cv_iterator.py  hp_optimizers.py  nested_cv.py
libs/actitect-rbdisco/src/actitect/rbdisco/config/: pipeline_singleCenter.yaml
libs/actitect-rbdisco/src/actitect/rbdisco/configs/: external_test.yaml  pipeline_multiCenter.yaml  pipeline_singleCenter.yaml
libs/actitect-rbdisco/src/actitect/rbdisco/core/: __init__.py  data_loader.py  evaluator.py  feature_set.py  loader.py  manager.py  metrics.py  model_manager.py  types.py
libs/actitect-rbdisco/src/actitect/rbdisco/models/: __init__.py  models.py
libs/actitect-rbdisco/src/actitect/rbdisco/models/pretrained/: multiCenterCore.joblib  multiCenterExtended.joblib  singleCenterCore.joblib  singleCenterExtended.joblib
libs/actitect-rbdisco/src/actitect/rbdisco/pipelines/: __init__.py  base_pipeline.py  pooled_pipeline.py  test_pipeline.py  train_pipeline.py
libs/actitect-rbdisco/src/actitect/rbdisco/processing/: aggregation.py  apply_smote.py  classification_threshold.py  feature_ranking.py  metrics.py  probability_calibration.py
libs/actitect/src/actitect/: api.py  cli.py
libs/actitect/src/actitect/actimeter/: __init__.py  basedevice.py  factory.py
libs/actitect/src/actitect/actimeter/devices/: __init__.py  actigraph.py  axivity.py  axivity_ax6.py  geneactiv.py  generic.py
libs/actitect/src/actitect/actimeter/settings/: __init__.py  settings.py
libs/actitect/src/actitect/config/: config.py  dataset_2_color.yaml  default_preprocessing.yaml  experiment_root.json  logging_config.yaml
libs/actitect/src/actitect/features/: __init__.py  features.py  hopkins.py  local_.py
libs/actitect/src/actitect/processing/: __init__.py  calibration.py  file_processor.py  filter.py  movements.py  nonwear.py  sleep.py
libs/actitect/src/actitect/scripts/: preprocess_dataset.py
libs/actitect/src/actitect/utils/: __init__.py  data_utils.py  dict_utils.py  io_utils.py  logging_utils.py  stats_utils.py  utils.py  visualization.py
libs/actitect/src/actitect/vis/: visualization.py
src/aktiRBD/: __init__.py
src/aktiRBD/actimeter/: __init__.py  basedevice.py  factory.py
src/aktiRBD/actimeter/devices/: _actigraph_dtypes.py  actigraph.py  actiwatch.py  axivity_ax6.py  geneactiv.py  generic.py
src/aktiRBD/classifier/: models.py
src/aktiRBD/classifier/pipelines/: base_pipeline.py  pooled_pipeline.py  test_pipeline.py  train_pipeline.py
src/aktiRBD/classifier/tools/: __init__.py  aggregation.py  apply_smote.py  classification_threshold.py  cross_validation.py  cv_iterator.py  data_loader.py  data_loader_legacy.py  evaluator.py  feature_set.py  hp_optimizers.py  metrics.py  model_manager.py  nested_cv.py  nested_cv_new.py  pipeline.py  probability_calibration.py
src/aktiRBD/config/: config.py  dataset_2_color.yaml  experiment_root.json  external_test.yaml  pipeline.yaml  pipeline_external_cv.yaml  pipeline_internal_cv.yaml  preprocessing.yaml
src/aktiRBD/features/: features.py  global_.py  hopkins.py  local_.py  ranking.py
src/aktiRBD/models/pretrained/: models_cgn.joblib  models_cgn_full.joblib  models_cgn_merged.joblib  models_cgn_train.joblib  models_pooled.joblib
src/aktiRBD/processing/: __init__.py  calibration.py  file_processor.py  filter.py  movements.py  resampling.py  sleep.py  utils.py
src/aktiRBD/scripts/: preprocess_dataset.py  run_pipeline.py
src/aktiRBD/utils/: utils.py  visualization.py
