[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aktiRBD"
version = "0.1.0"
description = "none"
readme = "README.md"
requires-python = "==3.9.*"
authors = [
  { name = "David Bertram", email = "dbertram@uni-koeln.de" }
]
license = { file = "LICENSE" }
classifiers = [
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Operating System :: OS Independent",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console"
]

dependencies = [
  # core
  "numpy==1.26.3",
  "scipy==1.11.4",
  "pandas==2.2.0",
  "statsmodels==0.14.1",

  # speedup
  "joblib==1.2.0",  # parallelization and model saving
  "numba==0.59.0",  # speed-up feature aggregation

  # ml
  "scikit_learn==1.3.0",
  "scikit_optimize==0.10.1",  # bayesian optimization
  "imbalanced_learn==0.12.0",  # smote
  "mrmr_selection==0.2.8",  # feature selection
  "umap_learn==0.5.5",  # feature space projections
  "xgboost==2.0.3",
  "shap==0.45.1",  # xgb importances

  # time series
  "nolds==0.5.2",  # non-linear dynamics features
  "pyhrv==0.4.1",   # poincare features -> triggers Spectrum issues on windows
  "biosppy>2.0.0,<2.2.3",  # depedency of pyhrv, with 2.2.3 peakutils missing

  # i/o
  "openpyxl==3.1.2",  # reading from excel files
  "PyYAML==6.0.1",  # loading configs
  "pyarrow==15.0.0",  # saving large dataframes

  # misc
  "matplotlib==3.8.2",  # visualization
  "tqdm==4.66.2",  # progress bars
  "colorama==0.4.6",  # colored logging
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "setuptools>=64.0",
]

[project.scripts]
aktiRBD-preprocess = "aktiRBD.scripts.preprocess_dataset:main"
aktiRBD-analysis   = "aktiRBD.scripts.run_pipeline:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = { where = ["src"] }

[tool.setuptools.package-data]
"aktiRBD" = ["config/*.yaml", "config/*.json", "models/**/*.joblib"]

[project.urls]
Repository = "todo"
Publication = "todo"