[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actitect"
version = "1.0.0"
description = "Python toolkit for general purpose actigraphy analysis."
readme = "README.md"
requires-python = "==3.9.*"
authors = [
  { name = "David Bertram", email = "dbertram@uni-koeln.de" }
]
maintainers = [
     { name = "David Bertram", email = "dbertram@uni-koeln.de" }
]
license = { file = "LICENSE" }
classifiers = [
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Operating System :: OS Independent",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console"
]

dependencies = [
  # core
  "numpy==1.26.3",
  "scipy==1.11.4",
  "pandas==2.2.0",
  "statsmodels==0.14.1",

  # speedup
  "joblib==1.2.0",  # parallelization and model saving
  "numba==0.59.0",  # speed-up feature aggregation

  # time series
  "nolds==0.5.2",  # non-linear dynamics features
  "pyhrv==0.4.1",   # poincare features -> triggers Spectrum issues on windows
  "biosppy>2.0.0,<2.2.3",  # depedency of pyhrv, with 2.2.3 peakutils missing
  "scikit_learn==1.3.0", # is dependendy of biosppy
  "scikit_optimize==0.10.1",  # bayesian optimization (rbdisco plugin), but we need 'Dimnesion' for JSONEncoder in utils

  # i/o
  "openpyxl==3.1.2",  # reading from excel files
  "PyYAML==6.0.1",  # loading configs
  "pyarrow==15.0.0",  # saving large dataframes

  # misc
  "matplotlib==3.8.2",  # visualization
  "tqdm==4.66.2",  # progress bars
  "colorama==0.4.6",  # colored logging
]

[project.optional-dependencies]
dev = ["pytest==8.3.4", "setuptools>=64.0"]
# let users do `pip install "actitect[rbdisco]"`
rbdisco = ["actitect-rbdisco>=0.1"]

[project.scripts]
actitect-process = "actitect.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = { where = ["src"] }

[tool.setuptools.package-data]
"acitect" = ["config/*.yaml", "config/*.json"]

[project.urls]
Repository = "todo"
Publication = "todo"